# stm32f411ceu6_esp8266_integration

./: .clang-format  .cppcheck-suppressions  .gitignore  CMakeLists.txt  STM32F411XX_FLASH.ld  stm32f411ceu6_vscode_test.ioc
Core/Inc/: AlarmView.h  BankView.h  CalendarView.h  ClockView.h  DateHelper.h  ESPComm.h  FlipClockView.h  StatusView.h  View.h  application.h  esp_comm.h  gfxconf.h  main.h  romfs_files.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  string_utils.h  types.h
Core/Inc/img/: piggy_96_96.h
Core/Src/: AlarmView.c  BankView.c  CalendarView.c  ClockView.c  DateHelper.c  ESPComm.c  ESP_README.md  ESP_WIFI_GUIDE.md  FlipClockView.c  StatusView.c  application.c  esp_comm.c  esp_example.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  string_utils.c
USB_DEVICE/App/: usbd_storage_if.c
cmake/stm32cubemx/: CMakeLists.txt
esp8266_firmware/: README.md  platformio.ini
esp8266_firmware/examples/: simple_test.ino
esp8266_firmware/lib/ICalParser/: library.properties
esp8266_firmware/lib/ICalParser/src/: ICalParser.cpp  ICalParser.h
esp8266_firmware/lib/STM32Comm/: library.properties
esp8266_firmware/lib/STM32Comm/src/: STM32Comm.cpp  STM32Comm.h
esp8266_firmware/src/: main.ino
tests/: CMakeLists.txt  README.md  test_datehelper.c  test_string_utils.c
tests/mocks/: hal_compat.h  stm32_hal_mock.c  stm32_hal_mock.h
